--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-paginate": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
