--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^7.5.4",
     "nodemailer": "^6.9.6",
     "nodemailer-express-handlebars": "^6.1.0",
+    "path": "^0.12.7",
     "ua-parser-js": "^1.0.36"
   },
   "devDependencies": {
