--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,3 @@
 {
-  "rewrites": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
